# matrix-translation-bot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
examples/: Example.webm  botconfig.toml.example  run.example  systemd.service.example
src/: main.rs  translate.rs
