[package]
name = "matrix-translation-bot"
version = "0.1.0"
authors = ["Ciarán Ainsworth <ciaranainsworth@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_api = "0.4.0"
config = "0.9.3"
ytr = { git = "https://github.com/Sporiff/ytr "}