[package]
name = "matrix-translation-bot"
version = "0.2.0"
authors = ["Ciarán Ainsworth <ciaranainsworth@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_api = { git = "https://github.com/Sporiff/matrix_bot_api/" }
config = "0.9.3"
ytr = "0.1.2"
chrono = "0.4.8"